kubernetes/apps/network/envoy-gateway/app/oidc-google.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: oidc-google
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-internal
  oidc:
    provider:
      issuer: "https://accounts.google.com"
      authorizationEndpoint: "https://accounts.google.com/o/oauth2/v2/auth?access_type=offline"
      tokenEndpoint: "https://oauth2.googleapis.com/token"
    clientID: "976645342576-h0l683golj85f3jse02oe48dhkeq33nf.apps.googleusercontent.com"
    clientSecret:
      name: "oidc-google-secret"
    redirectURL: "https://sso.${SECRET_DOMAIN}/oauth2/callback"
    logoutPath: "/logout"
    scopes:
      - openid
      - email
      - profile
    refreshToken: true
    forwardAccessToken: true
    cookieDomain: "matherly.net"
