kubernetes/apps/network/envoy-gateway/app/oidc-ratelimit.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: oidc-ratelimit-matherly-net
  labels:
    app.kubernetes.io/component: oidc-ratelimit
    app.kubernetes.io/part-of: envoy-gateway
    domain: matherly-net
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: oidc-callback-matherly-net
  rateLimit:
    type: Local
    local:
      rules:
        - limit:
            requests: 30
            unit: Minute
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: oidc-ratelimit-spoonsofsalt-org
  labels:
    app.kubernetes.io/component: oidc-ratelimit
    app.kubernetes.io/part-of: envoy-gateway
    domain: spoonsofsalt-org
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: oidc-callback-spoonsofsalt-org
  rateLimit:
    type: Local
    local:
      rules:
        - limit:
            requests: 30
            unit: Minute
